kubernetes/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petshop
  name: petshop
  namespace: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petshop
  strategy:
    type: RollingUpdate       # Mise à jour continue
    rollingUpdate:
      maxSurge: 1             # Kubernetes autorise l'exécution temporaire de 3 pods maximum (2 anciens pods + 1 nouveau pod)
      maxUnavailable: 1       # vous avez 2 réplicas, au moins 1 pods seront toujours en cours d'exécution pendant que l'un d'eux est mis à jour ou remplacé.
  template:
    metadata:
      labels:
        app: petshop
    spec:
      containers:
      - name: petshop
        image: 192.168.222.60:8083/petshop:8
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP  
      imagePullSecrets:
      - name: nexus-secret
