kubernetes/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petshop
  name: petshop
  namespace: development
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: petshop
  type: NodePort
